2020-01-05 Franz Holzinger <franz@ttproducts.de>
    * use the Doctrine database interface instead of $GLOBALS["TYPO3_DB"]

2019-12-18 Franz Holzinger <franz@ttproducts.de>
    * compatibility for TYPO3 9 breaking 82162: replace constant TYPO3_DLOG by 
        isset($GLOBALS['TYPO3_CONF_VARS']['SC_OPTIONS']['t3lib/class.t3lib_div.php']['devLog'])

2019-11-01 Franz Holzinger <franz@ttproducts.de>
    * support for TYPO3 9.5.x

2018-11-25 Franz Holzinger <franz@ttproducts.de>
    * TYPO3 7: Do not replace \TYPO3\CMS\Core\TypoScript\TemplateService::sortedKeyList by \TYPO3\CMS\Core\Utility\ArrayUtility::filterAndSortByNumericKeys for TYPO3 7.6.

2018-08-26 Franz Holzinger <franz@ttproducts.de>
    * Do not use htmlspecialchars for label data. Use strip_tags instead where the HTML tags <div><p><span><strong><a><br> are allowed.

2018-08-11 Franz Holzinger <franz@ttproducts.de>
    * support for TYPO3 9.3.x
    * TYPO3 9: replace \TYPO3\CMS\Core\TypoScript\TemplateService::sortedKeyList by \TYPO3\CMS\Core\Utility\ArrayUtility::filterAndSortByNumericKeys
    * TYPO3 9: replace GeneralUtility::removeXSS by htmlspecialchars
    * TYPO3 9: Do not call $this->cObj->getClosestMPvalueForPage any more.

2018-07-26 Franz Holzinger <franz@ttproducts.de>
    * Remove the file ext_autoload.php because the file composer.json must be used.
    * bugfix: use a correct namespace notation for the SC_OPTIONS - tslib/class.tslib_fe.php hooks.

2018-05-21 Franz Holzinger <franz@ttproducts.de>
    * bugfix for TYPO3 8.x: use JambageCom\Div2007\Utility\HtmlUtility::XHTML_clean instead of the missing TYPO3\CMS\Core\Html\HtmlParser::XHTML_clean

2018-04-30 Franz Holzinger <franz@ttproducts.de>
    * new feature: add support for RSA encryption in the form entry fields
    * bugfix: Do not use invalid HTML with square brackets in the tag id.
        replace id data[tt_board][NEW][notify_me] by mailformdata:ttboard:NEW:notifyme: