@@ -4,7 +4,7 @@ $EM_CONF[$_EXTKEY] = array(
     'title' => 'Frontend TCE',
     'description' => 'It brings the deprecated TYPO3 4.x class tslib_feTCE and the processScript FEData setup with new features partly back into TYPO3 9+. This is needed by extensions based on the former TYPO3 FORM like tt_board and tt_guest. Only form MAIL and form wizards additionally require the extension compatibility6.',
     'category' => 'plugin',
-    'version' => '0.5.0',
+    'version' => '0.5.1',
     'state' => 'stable',
     'uploadfolder' => 0,
     'createDirs' => '',
