@@ -1,4 +1,5 @@
 2020-01-05 Franz Holzinger <franz@ttproducts.de>
+    * new feature: the method execNEWinsert must return the uid of the successfully inserted record and not the count of inserted records
     * use the Doctrine database interface instead of $GLOBALS["TYPO3_DB"]
 
 2019-12-18 Franz Holzinger <franz@ttproducts.de>
